# etl-stream

./: .env.example  .gitignore  Cargo.toml  GUIDE_PROMPT.md  README.md  SUMMARY_ANALYZE.md  docker-compose.yml
.agent/rules/: code-style-guide.md
.github/: copilot-instructions.md
docs/: README.md  architecture.md  components.md  data_flow.md  maintenance.md
etl-destination/: Cargo.toml
etl-destination/src/: egress.rs  lib.rs
etl-destination/src/bigquery/: client.rs  core.rs  encoding.rs  mod.rs  test_utils.rs  validation.rs
etl-destination/src/iceberg/: catalog.rs  client.rs  core.rs  encoding.rs  error.rs  mod.rs  schema.rs  test_utils.rs
etl-destination/src/snowflake/: bridge.rs  config.rs  core.rs  error.rs  mod.rs
etl-snowflake-py/: README.md  pyproject.toml  requirements.txt
etl-snowflake-py/etl_snowflake/: __init__.py  cleanup.py  client.py  config.py  ddl.py  task.py  type_mapping.py
etl-snowflake-py/etl_snowflake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etl-snowflake-py/tests/: test_auto_creation_verify.py  test_ddl_validation.py  test_flow_verify_temp.py  test_task_conversion.py
etl-telemetry/: Cargo.toml
etl-telemetry/src/: lib.rs  metrics.rs  tracing.rs
migrations/: 001_create_tables.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: etl_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
profile_json/: profile_tbl_sales.json
risingwave/: snowflake.rs
snowpipe_streaming_example/: README.md  profile.json.example  requirements.txt  streaming_ingestion_python.py
sql/: dummy_data.sql  snowflake.rs  snowflake.sql
src/: alert_manager.rs  circuit_breaker.rs  config.rs  config_validation.rs  constants.rs  health.rs  main.rs  metrics.rs  pipeline_manager.rs  schema_cache.rs  tracing_context.rs  wal_monitor.rs
src/destination/: http_destination.rs  mod.rs  snowflake_destination.rs
src/repository/: destination_repository.rs  mod.rs  pipeline_repository.rs  source_repository.rs
src/store/: custom_store.rs  mod.rs  redis_store.rs  redis_transaction.rs
tests/: config_tests.rs  custom_store_tests.rs  http_destination_tests.rs  integration_tests.rs  repository_tests.rs  schema_cache_tests.rs
tests/common/: mod.rs
webhook/: alert.py  main.py  main2.py  webhook.py
