[package]
name = "etl-stream"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
etl = { git = "https://github.com/supabase/etl" }
etl-telemetry = { path = "./etl-telemetry" }
metrics = "0.24"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
pyo3 = { version = "0.22", features = ["auto-initialize"] }
futures = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.1"
uuid = { version = "1.0", features = ["v4"] }
