[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-snowflake"
version = "0.1.0"
description = "Snowflake destination for ETL pipeline with Snowpipe Streaming support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "snowflake-connector-python>=3.0.0",
    "snowpipe-streaming>=0.1.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_snowflake*"]
